fix apartments details on small screens

--- a/src/components/ApartmentsDemo/ApartmentsDemo.scss
+++ b/src/components/ApartmentsDemo/ApartmentsDemo.scss
@@ -54,13 +54,20 @@
       width: 30%;
 
       @media (max-width: 992px) {
-        width: auto;
+        width: 50%;
+      }
+    }
+
+    & > div:last-child {
+      @media (max-width: 992px) {
+        margin-top: 20px;
       }
     }
 
     @media (max-width: 992px) {
       width: 100%;
       justify-content: space-between;
+      flex-wrap: wrap;
     }
   }
 
